Sat Oct 13 01:47:44 2001  George Lebl <jirka@5z.com>

	* modules/vfolder-desktop-method.c:  A piece of not-yet-working
	  code to do the "programs:" scheme but with vfolders.  Aimed
	  to complement the desktop-method, not to replace it for
	  everything.  Doesn't even compile, but I'm paranoid so I want
	  to commit things.

2001-10-07  Maciej Stachowiak  <mjs@noisehavoc.org>
 
 	* modules/nfs-method.c: (rpc_init_tcp): Fix bug 55805 (mistake in
 	gnome-vfs/modules/nfs-method.c), patch from Martin Pool
 	<mbp@samba.org>.
 
2001-10-02  Darin Adler  <darin@bentspoon.com>

	* modules/http-method.c: (build_request), (make_request):
	* test/test-shell.c: (do_cd):
	g_string_printfa -> g_string_append_printf

2001-10-02  Darin Adler  <darin@bentspoon.com>

	* .cvsignore:
	* Makefile.am:
	* configure.in:
	Changed from xml-i18n-tools to intltool.

	* doc/tmpl/gnome-vfs-unused.sgml: Regenerated by gtk-doc.
	(Do we have a version mismatch?)

2001-09-30  Anders Carlsson  <andersca@gnu.org>

	* libgnomevfs/gnome-vfs-module-callback.c:
	(gnome_vfs_module_callback_free_stack_info): Free the stack info
	structure too.

2001-09-28  Darin Adler  <darin@bentspoon.com>

	* modules/file-method.c: (do_read_directory):
	Add back MIME type code that we accidentally removed when
	we removed directory filtering.

2001-09-26  Maciej Stachowiak  <mjs@noisehavoc.org>

	* configure.in, NEWS: updated for 1.9.1

2001-09-26  Maciej Stachowiak  <mjs@noisehavoc.org>

	* doc/tmpl/gnome-vfs-unused.sgml: Regenerated by gtk-doc

	Merged some changes from the stable branch:

	2001-09-10  Maciej Stachowiak  <mjs@noisehavoc.org>

	* libgnomevfs/gnome-vfs-uri.h, libgnomevfs/gnome-vfs-uri.c
	(gnome_vfs_uri_resolve_relative): Renamed from
	gnome_vfs_uri_relative_new; reversed argument order.

	2001-09-08  Maciej Stachowiak  <mjs@noisehavoc.org>

	Fix make distcheck:

	* libgnomevfs/gnome-vfs-configuration.c: (configuration_load),
	(install_path_list), (gnome_vfs_configuration_init):