@@ -1,3 +1,9 @@
+Sun Oct 14 02:31:58 2001  George Lebl <jirka@5z.com>
+
+	* modules/vfolder-desktop-method.c:  Implement most of the read-only
+	  functionality, the only thing missing is understanding sort order.
+	  Still not added to the build, however it now actually works.
+
 Sat Oct 13 01:47:44 2001  George Lebl <jirka@5z.com>
 
 	* modules/vfolder-desktop-method.c:  A piece of not-yet-working
